[project]
name = "rerun-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryhara", email = "ryosei.hara@gmail.com" }
]
dependencies = [
    "rerun-sdk>=0.18.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rerun_example"]
